--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wordle Clone!</title>
+
+    <script src="app.js"></script>
+
+    <link rel="stylesheet" href="main.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <div id="game">
+        <header>
+          <h1 class="title">WORDLE</h1>
+        </header>
+      </div>
+    </div>
+  </body>
 </html>
