--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <header>
           <h1 class="title">WORDLE</h1>
         </header>
+
+        <div id="board-container">
+          <div id="board"></div>
+        </div>
       </div>
     </div>
   </body>
